--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -27,7 +27,7 @@
                         {% elseif user.sector == 'Comptabilité' %}
                             class="table-warning"
                         {% elseif user.sector == 'Direction' %}
-                            class="table-dangerrrrr"
+                            class="table-danger"
                         {% endif %}
                 >
                     <td>{{ user.lastname }}</td>
